--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 python-dotenv
-google-generativeai
-langchain
-PyPDF
+google-generativeai>=0.7.0
+langchain>=0.2.0
+langchain-community>=0.2.0
+langchain-google-genai>=0.1.0
+pypdf
 faiss-cpu
 streamlit
--e .
