Added Quiz Generation Model

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 GOOGLE_API_KEY = "AIzaSyD1YP_cDx6YR8J5g6uUDnW5yH1yennsD18"
+
+
+AIzaSyBrKL43ZDRmhuJkZc6yneMH2I5c7ESps0E
+
+
+GOOGLE_API_KEY_1=AIzaSyD1YP_cDx6YR8J5g6uUDnW5yH1yennsD18
+GOOGLE_API_KEY_2=AIzaSyBrKL43ZDRmhuJkZc6yneMH2I5c7ESps0E
+GOOGLE_API_KEY_3=AIzaSyAvREkY9BL1JIalu7Sic1Fi92q_T8KmvPE
